--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سلة التسوق - Basket Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: {
+                DEFAULT: '#003366', // الأزرق الداكن الخاص بأبو طويلة
+                dark: '#002244',
+              },
+              accent: {
+                DEFAULT: '#e31e24', // الأحمر الخاص بالعروض
+                hover: '#c41a20',
+              }
+            }
+          }
+        }
+      }
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Cairo', sans-serif;
+        background-color: #f4f7f9;
       }
       .animate-slide {
         animation: slideIn 0.5s ease-out forwards;
@@ -19,29 +38,48 @@
         to { opacity: 1; transform: translateY(0); }
       }
       .loader {
-        border-top-color: #f04e23;
+        border-top-color: #003366;
         animation: spinner 1.5s linear infinite;
       }
       @keyframes spinner {
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
       }
+      .animate-slide-left {
+        animation: slide-left 0.3s ease-out forwards;
+      }
+      @keyframes slide-left {
+        from { transform: translateX(100%); }
+        to { transform: translateX(0); }
+      }
+      .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+      }
+      .scrollbar-hide {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+      .product-card:hover {
+        box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
+      }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0",
+    "firebase/app": "https://esm.sh/firebase@11.1.0/app",
+    "firebase/firestore": "https://esm.sh/firebase@11.1.0/firestore",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
     "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
 </script>
-</head>
-  <body class="bg-gray-50 text-gray-900">
+  </head>
+  <body class="text-gray-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
